Added layout link(with routes)

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,8 +2,8 @@
 				<%= image_tag("lan.jpg", :alt => "Sample App", :class => "round") %>
 				<nav class="round">
 					<ul>
-						<li><%= link_to "home", '/pages/home' %></li>
-						<li><%= link_to "help", '#' %></li>
+						<li><%= link_to "home", root_url %></li>
+						<li><%= link_to "help", help_path %></li>
 						<li><%= link_to "Sign in", '#' %></li>
 					</ul>
 				</nav>
