--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer>
 	<nav class="round">
 		<ul>
-			<li><%= link_to "about", "#" %></li>
-			<li><%= link_to "contact", "#" %></li>
+			<li><%= link_to "about", about_path %></li>
+			<li><%= link_to "contact", contact_path %></li>
 		</ul>
 	</nav>
 </footer>
