--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 			<header>
-				<%= image_tag("lan.jpg", :alt => "Sample App", :class => "round") %>
+				<%= link_to logo, root_url %>
 				<nav class="round">
 					<ul>
 						<li><%= link_to "home", root_url %></li>
