--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
 	</head>
 	
 	<body>
+		<% flash.each do |key, value| %>
+				<p><%= value %></p>
+		<% end %>
 		<div class="container">
 			<%= render 'layouts/header' %>
 			<section class="round">
