new errors Yeah !!!!

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Scoreboard Lan Party</h1>
+<p>Welkom op het interactief scoreboard voor onze lanparty</p>
 
 <%= link_to "sign up now!", signup_path, :class => "signup_button round" %>
