--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,20 +14,20 @@
 	<% end %>
 
 	<p>
-		<%= u.label :nickname %>
+		<%= u.label :nickname %></br>
 		<%= u.text_field :nickname %>
 	</p>
 	<p>
-		<%= u.label :email %>
+		<%= u.label :email %></br>
 		<%= u.text_field :email %>
 	</p>
 	<p>
-		<%= u.label :password %>
-		<%= password_field_tag(:password) %>
+		<%= u.label :password %></br>
+		<%= u.password_field :password %>
 	</p>
 	<p>
-		<%= u.label :password_confirmation %>
-		<%= password_field_tag(:password) %>
+		<%= u.label :password_confirmation %></br>
+		<%= u.password_field :password_confirmation %>
 		
 	</p>
 	<p>
