--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,25 +13,30 @@
 		</ul>
 	<% end %>
 
-	<p>
-		<%= u.label :nickname %></br>
-		<%= u.text_field :nickname %>
-	</p>
-	<p>
-		<%= u.label :email %></br>
-		<%= u.text_field :email %>
-	</p>
-	<p>
-		<%= u.label :password %></br>
-		<%= u.password_field :password %>
-	</p>
-	<p>
-		<%= u.label :password_confirmation %></br>
-		<%= u.password_field :password_confirmation %>
-		
-	</p>
+	
+	<table>
+		<tr>
+			<td><%= u.label :nickname %></td>
+			<td><%= u.text_field :nickname %></td>
+		</tr>
+		<tr>
+			<td><%= u.label :email %></td>
+			<td><%= u.text_field :email %></td>
+		</tr>
+		<tr>
+			<td><%= u.label :password %></td>
+			<td><%= u.password_field :password %></td>
+		</tr>
+		<tr>
+		 	<td><%= u.label :password_confirmation %></td>
+			<td><%= u.password_field :password_confirmation %></td>
+		</tr>
+	</table>
+	
 	<p>
 		<%= u.submit "Create profile" %>
 	</p>
+
+
 
 <% end %>
