--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
 
+<% provide(:title, @user.nickname) %>
+<%= image_tag avatar_url(@user.email) %>
 <h2><%= @user.nickname %></h2>
+
 <p><b>email : </b><%= @user.email %></p>
