added a sidebar to show.html

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,6 +24,10 @@
 			<td><%= u.text_field :email %></td>
 		</tr>
 		<tr>
+			<td><%= u.label :avatar_url %></td>
+			<td><%= u.text_field :avatar_url %></td>
+		</tr>
+		<tr>
 			<td><%= u.label :password %></td>
 			<td><%= u.password_field :password %></td>
 		</tr>
