--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,7 +4,7 @@
 }
 
 body{
-	background: navy  ;
+	background: black  ;
 	/*background: #282828 ;*/
 
 }
@@ -105,5 +105,22 @@ section h1{
 	font-size: 200%;
 }
 
+table.profile{
+	width: 100%;
+	margin-bottom: 0;
+}
+
+td.main {
+	width: 70%;
+	padding: 1em;
+}
+
+td.sidebar{
+	width: 30%;
+	padding: 1em;
+	vertical-align: top;
+	background: #6495ED;
+	color: white;
+}
 @import "bootstrap";
 
