--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
 					<ul>
 						<li><%= link_to "home", root_url %></li>
 						<li><%= link_to "help", help_path %></li>
-						<li><%= link_to "Sign in", '#' %></li>
+						<li><%= link_to "Sign in", '/signin' %></li>
 					</ul>
 				</nav>
 			</header>
