--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,30 +15,30 @@
 
 	
 	<table>
+	
+
 		<tr>
-			<td><%= u.label :nickname %></td>
-			<td><%= u.text_field :nickname %></td>
+			<td>
+				<%= u.label :nickname %><br />
+				<%= u.label :email %><br />
+				<%= u.label :avatar_url %><br />
+				<%= u.label :password %><br />
+				<%= u.label :password_confirmation,"Confirmation" %>
+			</td>
+			<td>
+				<%= u.text_field :nickname %><br />
+				<%= u.text_field :email %><br />
+				<%= u.text_field :avatar_url %><br />
+				<%= u.password_field :password %><br />
+				<%= u.password_field :password_confirmation %>
+			</td>
 		</tr>
-		<tr>
-			<td><%= u.label :email %></td>
-			<td><%= u.text_field :email %></td>
-		</tr>
-		<tr>
-			<td><%= u.label :avatar_url %></td>
-			<td><%= u.text_field :avatar_url %></td>
-		</tr>
-		<tr>
-			<td><%= u.label :password %></td>
-			<td><%= u.password_field :password %></td>
-		</tr>
-		<tr>
-		 	<td><%= u.label :password_confirmation %></td>
-			<td><%= u.password_field :password_confirmation %></td>
-		</tr>
+
 	</table>
 	
 	<p>
-		<%= u.submit "Create profile" %>
+		
+		<%= u.submit "Create profile", class: "btn btn-large btn-primary" %>
 	</p>
 
 
