--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -7,3 +7,4 @@
 	  <%= csrf_meta_tags %>
 	  <!--[if lt IE 8]><%= stylesheet_link_tag 'blueprint/ie'%><![endif]-->
 	  <%= stylesheet_link_tag 'custom', :media => 'screen' %>
+	  <%= javascript_include_tag :defaults %>
