--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -122,5 +122,18 @@ td.sidebar{
 	background: #6495ED;
 	color: white;
 }
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid ;
+    &:last-child {
+      border-bottom: 1px solid ;
+    }
+  }
+}
 @import "bootstrap";
 
