--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,10 +6,10 @@
 						<li><%= link_to "help", help_path %></li>
 						
 						<% if signed_in? %>
-			            <li><%= link_to "Users", '#' %></li>
+			            <li><%= link_to "Users", users_path %></li>
 			          	
 				              <li><%= link_to "Profile", current_user %></li>
-				              <li><%= link_to "Settings", '#' %></li>
+				              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
 				              <li class="divider"></li>
 				              <li><%= link_to 'Sign out', signout_path, :method => :delete	 %>
 				                  </li>
