--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,10 @@
     <li>
       <%= image_tag avatar_url(user) %>
       <%= link_to user.nickname, user %>
+      <% if current_user.admin? && !current_user?(user) %>
+    | <%= link_to "delete", user, method: :delete,
+                                  data: { confirm: "You sure?" } %>
+ 	  <% end %>
     </li>
   <% end %>
 </ul>
