destroy up to date

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,8 +4,7 @@
 }
 
 body{
-	background: black  ;
-	/*background: #282828 ;*/
+	background: #000000  ;
 
 }
 
@@ -15,7 +14,7 @@ header{
 
 header img{
 	padding: 1em;
-	background: #F0F0F0  ;
+	background: #F0F0F0 ;
 }
 
 section{
