--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
-
+<meta http-equiv="refresh" content="60" />
 
 <h1>Scoreboard Lan Party</h1>
 <p>Welkom op het interactief scoreboard voor onze lanparty</p>
 
 <%= link_to "sign up now!", signup_path, :class => "signup_button round" %>
+
