--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
 	<nav class="round">
 		<ul>
-			<li><%= link_to "about", about_path %></li>
+			<li><%= link_to "rules", rules_path	 %></li>
 			<li><%= link_to "contact", contact_path %></li>
 		</ul>
 	</nav>
