--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,17 +6,20 @@
 						<li><%= link_to "help", help_path %></li>
 						
 						<% if signed_in? %>
-			            <li><%= link_to "Users", users_path %></li>
-			          	
+			           		  <li>|</li>
+			           		  <li><%= link_to "Users", users_path %></li>	
+			           		  <li><%= link_to "Challenges", challenges_path %></li>		          		
 				              <li><%= link_to "Profile", current_user %></li>
 				              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-				              <li class="divider"></li>
-				              <li><%= link_to 'Sign out', signout_path, :method => :delete	 %>
-				                  </li>
+				              <li>|</li>
+				              <li><%= link_to 'Sign out', signout_path, :method => :delete	 %></li>
+				              <li>|</li>
 
 				            
 			          <% else %>
+			            <li>|</li>
 			            <li><%= link_to "Sign in", signin_path %></li>
+			            <li>|</li>
 			          <% end %>
 					</ul>
 				</nav>
