--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,16 @@
 	</head>
 	
 	<body>
-		<% flash.each do |key, value| %>
-				<p><%= value %></p>
-		<% end %>
 		<div class="container">
+
+			
+				<% flash.each do |key, value| %>
+					<section class="round">
+							<h4><center><p><%= value %></p></center></h4>
+					</section>
+				<% end %>
+			
+		   
 			<%= render 'layouts/header' %>
 			<section class="round">
 			<%= yield %>
