--- a/app/assets/stylesheets/blueprint/src/reset.css
+++ b/app/assets/stylesheets/blueprint/src/reset.css
@@ -36,7 +36,7 @@ footer, header, hgroup, menu, nav, section {
 /* Line-height should always be unitless! */
 body {
   line-height: 1.5;
-  background: white;
+  background: #808080;
 }
 
 /* Tables still need 'cellspacing="0"' in the markup. */
