--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,11 +1,11 @@
 .container{
 	margin-top: 10px;
 	width: 710px;
+	background-color: #808080;
 }
 
-body{
-	background: #000000  ;
-
+html, body{
+    background-color: #808080;
 }
 
 header{
@@ -134,5 +134,6 @@ td.sidebar{
     }
   }
 }
+
 @import "bootstrap";
 
