--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -1,8 +1,10 @@
 <%= form_for(@challenge) do |f| %>
   
   <div class="field">
-    <%= f.text_field :player_one, placeholder: "Compose new micropost..." %>
-    <%= f.text_field :player_two, placeholder: "Compose new micropost..." %>
+    <%= f.text_field :player_one, placeholder: "Player one..." %>
+    <%= f.text_field :player_two, placeholder: "Player two..." %>
+    <%= f.text_field :challenge_game, placeholder: "wich game???" %>
+   
   </div>
   <%= f.submit "Create challenge", class: "btn btn-large btn-primary" %>
 <% end %>
