--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -32,6 +32,7 @@
 				
 				<%= u.password_field :password %><br />
 				<%= u.password_field :password_confirmation %>
+				<%= u.hidden_field :coins, :value => "10" %>
 				
 			</td>
 		</tr>
