--- a/app/views/users/update_admin.html.erb
+++ b/app/views/users/update_admin.html.erb
@@ -35,7 +35,7 @@
 	
 	<p>
 		
-		<%= u.submit "Update profile", class: "btn btn-large btn-primary" %>
+		<%= u.submit "Create profile", class: "btn btn-large btn-primary" %>
 	</p>
 
 
