--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
 
 		    <% if current_user.admin? && !current_user?(user) %>
 		    | <%= button_to "delete", user, method: :delete,
-		                                  data: { confirm: "You sure?" } %>
+		                                  data: { confirm: "You sure?" }  ,class: "btn btn-small btn-primary" %>
 		 	  <% end %>
 		    </li>
 		  <% end %>
