--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,6 +24,8 @@
 			<%= @user.email %><br />
 			<strong>coins</strong><br />
 			<%= @user.coins %><br />
+			<strong>total score</strong><br />
+			<%= @user.total_score %><br />
 		</td>
 	</tr>
 </table>
