--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -1,8 +1,8 @@
 <%= form_for(@challenge) do |f| %>
   
   <div class="field">
-    <%= f.text_field :player_one, placeholder: "Player one..." %>*<br />
-    <%= f.text_field :player_two, placeholder: "Player two..." %>*<br />
+    <%= f.collection_select :player_one_id, User.all, :id, :nickname  %>*<br />
+    <%= f.collection_select :player_two_id, User.all, :id, :nickname  %>*<br />
     <%= f.text_field :challenge_game, placeholder: "wich game???" %>*<br />
    	<%= f.text_field :description, placeholder: "how to play the game ..." %><br />
    	* requierd
