--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,20 @@
 <% provide(:title, 'All users') %>
 <h1>Users</h1>
-<%= will_paginate %>
 <ul class="users">
   <% @users.each do |user| %>
     <li>
+    	<section>
       <%= image_tag avatar_url(user) %>
-      <%= link_to user.nickname, user %>
+      <%= link_to user.nickname, user %> |
+      <%= user.coins %> |
+      <%= user.total_score %>
 
 		    <% if current_user.admin? && !current_user?(user) %>
 		    | <%= button_to "delete", user, method: :delete,
 		                                  data: { confirm: "You sure?" }  ,class: "btn btn-small btn-primary" %>
 		 	  <% end %>
+		 	</section>
 		    </li>
 		  <% end %>
 
 </ul>
-<%= will_paginate %>
